--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/pickers": "^3.2.10",
     "moment": "^2.29.0",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
