--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "predeploy:netlify": "yarn build",
-    "deploy:netlify": "netlify deploy --prod",
+    "predeploy": "yarn build",
+    "deploy": "netlify deploy --prod",
     "test": "react-scripts test",
     "format": "prettier --config .prettierrc --write \"**/*.{ts,js,tsx,css,html,md}\"",
     "eslint": "eslint --config ./.eslintrc.json --ext .js,.ts,.jsx,.tsx src/",
