--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/moment": "^2.13.0",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
+    "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.4",
     "@types/react-router": "^5.1.2",
