--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "moment": "^2.29.0",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
+    "react-big-calendar": "^0.33.2",
     "react-dom": "^17.0.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
@@ -53,6 +54,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-beautiful-dnd": "^13.0.0",
+    "@types/react-big-calendar": "^0.30.1",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.4",
     "@types/react-router": "^5.1.2",
