--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,9 +23,7 @@
   "search.exclude": {
     ".git": true,
     ".eslintcache": true,
-    "src/dist": true,
-    "src/main.prod.js": true,
-    "src/main.prod.js.map": true,
+    "build": true,
     "bower_components": true,
     "dll": true,
     "release": true,
